--- a/Admin/admin_dashboard.html
+++ b/Admin/admin_dashboard.html
@@ -136,6 +136,7 @@
     <a href="create_assignment.html">Assignment</a>
     <a href="upload_material.html">Upload Material</a>
     <a href="student.html">Students</a>
+     <a href="admin_grades.html">Grades</a>
     <a href="../index.html" class="logout-link" onclick="logout()">Logout</a>
   </div>
 
@@ -172,13 +173,13 @@
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-      authDomain: "clms-dbfe1.firebaseapp.com",
-      projectId: "clms-dbfe1",
-      storageBucket: "clms-dbfe1.firebasestorage.app",
-      messagingSenderId: "1025852714357",
-      appId: "1:1025852714357:web:282d74003f389767ad773c"
-    };
+    apiKey: "AIzaSyD_C4ZPXTXQZtZJbtAwTiub_rkIZcvsE2Y",
+    authDomain: "clms-19db3.firebaseapp.com",
+    projectId: "clms-19db3",
+    storageBucket: "clms-19db3.firebasestorage.app",
+    messagingSenderId: "218119035486",
+    appId: "1:218119035486:web:39291d39b4b461b56032cf"
+  };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
