--- a/Student/week_detail.html
+++ b/Student/week_detail.html
@@ -10,6 +10,7 @@
       background: #f5f9f8;
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
+      display: flex; /* Enables side-by-side layout for sidebar and main content */
     }
 
     .sidebar {
@@ -17,9 +18,15 @@
       background-color: #2A5C88;
       color: white;
       padding: 20px 10px;
+      transition: transform 0.3s ease-in-out;
+      z-index: 1000;
+      position: fixed; /* Ensures sidebar stays fixed */
+      top: 0;
+      left: 0;
+      width: 220px; /* Define fixed width for sidebar */
     }
 
-    .sidebar h4 {
+    .sidebar h4, .sidebar h5 {
       font-weight: bold;
       margin-bottom: 30px;
     }
@@ -60,38 +67,129 @@
       background: #1d4568;
     }
 
+    /* Style for the "Back" button */
+    #btnBackToCourse {
+        background-color: #1d4568 !important; /* Darker blue background */
+        color: white !important; /* White text color */
+        border-color: #1d4568 !important; /* Match border color */
+    }
+
+    #btnBackToCourse:hover {
+        background-color: #17405f !important; /* Even darker blue on hover */
+        border-color: #17405f !important;
+    }
+
     .toggle-btn {
-      display: none;
+      display: none; /* Hidden by default, shown on mobile */
     }
 
     .main-content {
+      flex-grow: 1; /* Allows main content to take remaining space */
       padding: 20px;
+      margin-left: 0; /* Default for mobile, overridden by desktop media query */
     }
 
+    /* Styles for general cards */
     .card {
-      border: none;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border: none;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border-radius: 8px; /* Added border-radius for consistency */
+        background: #fff; /* Ensure white background for cards */
+        transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover */
+    }
+
+    /* Styles for the specific study material/assignment cards */
+    .card .card-body {
+        padding: 15px; /* Adjust padding for desired card size */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%; /* Ensure content fills card height */
+    }
+
+    .card h5.card-title { /* More specific selector for card titles */
+        font-weight: bold;
+        color: #2A5C88;
+        margin-bottom: 8px;
+        font-size: 1.1em;
+    }
+
+    .card p.card-text { /* More specific selector for card text */
+        margin-bottom: 3px;
+        color: #555;
+        font-size: 0.9em;
+    }
+
+    .card .btn {
+        width: 100%;
+        padding: 8px;
+        font-weight: bold;
+        border-radius: 5px;
+        margin-top: 10px;
+        font-size: 0.9em;
+    }
+    
+    .card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+
+    /* Mobile layout */
+    @media (max-width: 768px) {
+      body {
+        display: block; /* Stack sidebar and main content vertically on mobile */
+      }
+      .sidebar {
+        position: fixed;
+        width: 200px;
+        z-index: 1000;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .sidebar.show {
+        transform: translateX(0);
+      }
+
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        margin: 10px;
+        position: fixed; /* Keep toggle fixed on top-left */
+        top: 10px;
+        left: 10px;
+        z-index: 1001;
+      }
+
+      .main-content {
+        margin-left: 0; /* Full width on mobile */
+        padding-top: 60px; /* Add padding to prevent content from going under the fixed toggle button */
+      }
     }
 
     /* Desktop layout */
-@media (min-width: 769px) {
-  .sidebar {
-    position: fixed;
-    width: 220px;
-    top: 0;
-    left: 0;
-    transform: none; /* Always visible on desktop */
-  }
+    @media (min-width: 769px) {
+      .sidebar {
+          position: fixed;
+          width: 220px;
+          top: 0;
+          left: 0;
+          transform: none; /* Always visible on desktop */
+      }
 
-  .main-content {
-    margin-left: 220px; /* Leave space for sidebar */
-  }
+      .main-content {
+          margin-left: 220px; /* Leave space for sidebar */
+          padding: 20px;
+      }
 
-  .toggle-btn {
-    display: none; /* Hide toggle button on desktop */
-  }
-}
-
+      .toggle-btn {
+          display: none; /* Hide toggle button on desktop */
+      }
+    }
   </style>
 </head>
 <body>
@@ -99,30 +197,24 @@
   <!-- Toggle button for mobile -->
   <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
 
-  <div class="container-fluid">
-    <div class="row">
-
-      <!-- Sidebar -->
-      <div class="sidebar" id="sidebar">
-        <h5 id="pageTitle">Loading...</h5>
-        <a id="btnStudy" href="#" role="button">📚 Study Material</a>
-        <a id="btnAssignment" href="#" role="button">📝 Assignment</a>
-        <hr>
-        <a id="btnBackToCourse" href="#" class="btn btn-light btn-sm mt-3">⬅ Back</a>
-      </div>
-
-      <!-- Main Content -->
-      <div class="col-12 col-md-9 main-content-wrapper">
-        <div id="content" class="content">
-          <p>Loading...</p>
-        </div>
-      </div>
-
-    </div>
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <h5 id="pageTitle">Loading...</h5>
+    <a id="btnStudy" href="#" role="button">📚 Study Material</a>
+    <a id="btnAssignment" href="#" role="button">📝 Assignment</a>
+    <hr>
+    <!-- Removed btn-light class as it's being overridden by custom CSS -->
+    <a id="btnBackToCourse" href="#" class="btn btn-sm mt-3">⬅ Back</a>
   </div>
 
-  <!-- Custom Status Message -->
-  <div id="statusMessage" class="alert"></div>
+  <!-- Main Content -->
+  <div class="main-content">
+    <div id="content" class="content">
+      <p>Loading...</p>
+    </div>
+    <!-- Custom Status Message moved here for proper positioning -->
+    <div id="statusMessage" class="alert"></div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module">
@@ -130,12 +222,12 @@
     import { getFirestore, doc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-      authDomain: "clms-dbfe1.firebaseapp.com",
-      projectId: "clms-dbfe1",
-      storageBucket: "clms-dbfe1.firebasestorage.app",
-      messagingSenderId: "1025852714357",
-      appId: "1:1025852714357:web:282d74003f389767ad773c"
+      apiKey: "AIzaSyD_C4ZPXTXQZtZJbtAwTiub_rkIZcvsE2Y",
+      authDomain: "clms-19db3.firebaseapp.com",
+      projectId: "clms-19db3",
+      storageBucket: "clms-19db3.firebasestorage.app",
+      messagingSenderId: "218119035486",
+      appId: "1:218119035486:web:39291d39b4b461b56032cf"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -242,7 +334,7 @@
         );
         const qAssignmentsString = query(assignmentsRef,
           where("courseId", "==", courseId),
-          where("week", "==", `Week ${week}`),
+          where("week", "==", `Week ${week}`), // Assuming regular assignments might use "Week X"
           where("subject", "==", subject)
         );
 
@@ -253,7 +345,7 @@
         );
         const qCodeAssignmentsString = query(codeAssignmentsRef,
           where("courseId", "==", courseId),
-          where("week", "==", `Week ${week}`),
+          where("week", "==", `Week ${week}`), // Code assignments could also be stored with "Week X"
           where("subject", "==", subject)
         );
 
@@ -265,25 +357,20 @@
           getDocs(qCodeAssignmentsString),
         ]);
 
-        // Combine assignment docs from both week formats
-        let combinedAssignments = [...assignNumSnap.docs, ...assignStrSnap.docs];
-        // Combine code assignment docs similarly
-        let combinedCodeAssignments = [...codeNumSnap.docs, ...codeStrSnap.docs];
+        // Combine assignment docs from both week formats and add isCode flag
+        let allAssignmentDocs = [];
+        assignNumSnap.docs.forEach(doc => allAssignmentDocs.push({ id: doc.id, ...doc.data(), isCode: false }));
+        assignStrSnap.docs.forEach(doc => allAssignmentDocs.push({ id: doc.id, ...doc.data(), isCode: false }));
+        codeNumSnap.docs.forEach(doc => allAssignmentDocs.push({ id: doc.id, ...doc.data(), isCode: true }));
+        codeStrSnap.docs.forEach(doc => allAssignmentDocs.push({ id: doc.id, ...doc.data(), isCode: true }));
 
-        // Remove duplicate docs (by ID) in assignments
-        const assignmentMap = new Map();
-        combinedAssignments.forEach(doc => {
-          assignmentMap.set(doc.id, { id: doc.id, ...doc.data(), isCode: false });
+        // Filter out duplicates based on ID
+        const uniqueAssignmentsMap = new Map();
+        allAssignmentDocs.forEach(assignment => {
+            uniqueAssignmentsMap.set(assignment.id, assignment);
         });
+        assignments = Array.from(uniqueAssignmentsMap.values());
 
-        // Remove duplicate docs (by ID) in code assignments
-        combinedCodeAssignments.forEach(doc => {
-          if (!assignmentMap.has(doc.id)) {
-            assignmentMap.set(doc.id, { id: doc.id, ...doc.data(), isCode: true });
-          }
-        });
-
-        assignments = Array.from(assignmentMap.values());
 
         // Now load submissions for these assignments for the student
         const assignmentIds = assignments.map(a => a.id);
@@ -310,7 +397,11 @@
       const contentDiv = document.getElementById("content");
       let htmlContent = "";
 
+      document.getElementById("btnStudy").classList.remove("active");
+      document.getElementById("btnAssignment").classList.remove("active");
+
       if (type === "study") {
+        document.getElementById("btnStudy").classList.add("active");
         if (studyMaterials.length) {
           htmlContent = `
             <h4>📚 Study Material</h4>
@@ -337,6 +428,7 @@
           htmlContent = "<p>No study material found</p>";
         }
       } else if (type === "assignment") {
+        document.getElementById("btnAssignment").classList.add("active");
         if (assignments.length) {
           htmlContent = `
             <h4>📝 Assignments</h4>
@@ -345,10 +437,38 @@
                 const link = assignment.isCode
                   ? `take_code_assignment.html?assignmentId=${assignment.id}`
                   : `take_assignment.html?assignmentId=${assignment.id}`;
-                const title = assignment.title || `${assignment.subject} - ${assignment.week} Assignment`;
-                const createdDate = assignment.createdAt
-                  ? new Date(assignment.createdAt).toLocaleDateString()
-                  : "Unknown date";
+                
+                let assignmentType = assignment.isCode ? "Code Assignment" : "Objective Assignment";
+                let totalQuestions = 0;
+                let totalMarks = 0;
+
+                if (assignment.isCode) {
+                    // For code assignments, count problems as questions and calculate marks from test cases
+                    totalQuestions = (assignment.problems || []).length;
+                    totalMarks = (assignment.problems || []).reduce((sum, problem) => {
+                        return sum + (problem.visibleTestCases || []).length + (problem.hiddenTestCases || []).length;
+                    }, 0);
+                } else {
+                    // For regular assignments (Objective), each question is 1 mark
+                    const mcqQuestions = assignment.mcq || [];
+                    const fillBlanksQuestions = assignment.fillBlanks || [];
+                    const trueFalseQuestions = assignment.trueFalse || [];
+                    const codeQuestions = assignment.codeQuestions || []; 
+
+                    totalQuestions = mcqQuestions.length + fillBlanksQuestions.length + trueFalseQuestions.length + codeQuestions.length;
+                    totalMarks = totalQuestions; // 1 mark per question for objective assignments
+                }
+
+                // Handle createdAt which can be a Timestamp object or string
+                let createdDate;
+                if (assignment.createdAt && typeof assignment.createdAt.toDate === 'function') {
+                    createdDate = assignment.createdAt.toDate().toLocaleDateString();
+                } else if (typeof assignment.createdAt === 'string') {
+                    createdDate = new Date(assignment.createdAt).toLocaleDateString();
+                } else {
+                    createdDate = "Unknown date";
+                }
+
 
                 const btnText = assignment.submitted ? "Submitted" : "Start Assignment";
                 const btnClass = assignment.submitted ? "btn-success disabled" : "btn-primary";
@@ -357,7 +477,9 @@
                   <div class="col">
                     <div class="card h-100">
                       <div class="card-body">
-                        <h5 class="card-title">${title}</h5>
+                        <h5 class="card-title">${assignmentType}</h5>
+                        <p class="card-text">Total Questions: ${totalQuestions}</p>
+                        <p class="card-text">Total Marks: ${totalMarks}</p>
                         <p class="card-text text-muted">Created: ${createdDate}</p>
                         <a href="${link}" class="btn ${btnClass} mt-3">${btnText}</a>
                       </div>
@@ -379,6 +501,20 @@
     document.getElementById("btnAssignment").addEventListener("click", () => renderContent("assignment"));
 
     loadData();
+
+    // Sidebar toggle function for mobile
+    window.toggleSidebar = function () {
+      const sidebar = document.getElementById("sidebar");
+      if (sidebar) {
+        sidebar.classList.toggle('show');
+      }
+    }
+
+    // Logout function (placeholder, adapt to your actual logout logic)
+    window.logout = () => {
+        localStorage.removeItem("student"); 
+        location.href = "login.html"; // Redirect to login page
+    };
   </script>
 </body>
-</ht
+</html>
