--- a/Admin/upload_material.html
+++ b/Admin/upload_material.html
@@ -59,27 +59,64 @@
     .toggle-btn {
       display: none;
     }
+    .form-container {
+    background: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+/* Mobile layout */
+  @media (max-width: 768px) {
+    .sidebar {
+      position: fixed;
+      width: 200px;
+      z-index: 1000;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .sidebar.show {
+      transform: translateX(0);
+    }
+
+    .toggle-btn {
+      display: block;
+      background-color: #2A5C88;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      margin: 10px;
+    }
+
+    .main-content {
+      margin-left: 0;
+    }
+  }
+
 
     /* Desktop layout */
 @media (min-width: 769px) {
-  .sidebar {
-    position: fixed;
-    width: 220px;
-    top: 0;
-    left: 0;
-    transform: none; /* Always visible on desktop */
-  }
+    .sidebar {
+      position: fixed;
+      width: 220px;
+      top: 0;
+      left: 0;
+      transform: none;
+    }
 
-  .main-content {
-    margin-left: 220px; /* Leave space for sidebar */
-  }
+    .main-content {
+      margin-left: 220px; /* This rule will now apply */
+      padding: 20px;
+    }
 
-  .toggle-btn {
-    display: none; /* Hide toggle button on desktop */
+    .toggle-btn {
+      display: none;
+    }
   }
-}
 
   </style>
+
 </head>
 <body>
   <!-- Your toggle button -->
@@ -93,9 +130,11 @@
     <a href="create_assignment.html">Assignment</a>
     <a href="upload_material.html" class="active">Upload Material</a>
     <a href="student.html">Students</a>
+     <a href="admin_grades.html">Grades</a>
     <a href="../index.html" onclick="logout()">Logout</a>
   </div>
   <div class="main-content"> <!-- Renamed from .container for consistency -->
+    <div class="form-container">
     <h3>📤 Upload Multiple PDFs for a Week</h3>
     <form id="uploadForm">
       <div class="mb-3">
@@ -120,7 +159,7 @@
 
       <button type="submit" class="btn btn-primary">Upload</button>
     </form>
-
+</div>
     <div id="status" class="mt-3"></div>
   </div>
 
@@ -134,12 +173,12 @@
 
   // --- Firebase Config (unchanged) ---
   const firebaseConfig = {
-    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-    authDomain: "clms-dbfe1.firebaseapp.com",
-    projectId: "clms-dbfe1",
-    storageBucket: "clms-dbfe1.firebasestorage.app",
-    messagingSenderId: "1025852714357",
-    appId: "1:1025852714357:web:282d74003f389767ad773c"
+    apiKey: "AIzaSyD_C4ZPXTXQZtZJbtAwTiub_rkIZcvsE2Y",
+    authDomain: "clms-19db3.firebaseapp.com",
+    projectId: "clms-19db3",
+    storageBucket: "clms-19db3.firebasestorage.app",
+    messagingSenderId: "218119035486",
+    appId: "1:218119035486:web:39291d39b4b461b56032cf"
   };
 
   const app = initializeApp(firebaseConfig);
