--- a/Student/course_detail.html
+++ b/Student/course_detail.html
@@ -10,13 +10,21 @@
       background: #f5f9f8;
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
+      display: flex;
     }
 
+    /* Sidebar */
     .sidebar {
       min-height: 100vh;
       background-color: #2A5C88;
       color: white;
       padding: 20px 10px;
+      transition: transform 0.3s ease-in-out;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      z-index: 1000;
     }
 
     .sidebar h4 {
@@ -31,7 +39,6 @@
       padding: 10px;
       border-radius: 8px;
       transition: background-color 0.3s ease;
-      cursor: pointer;
     }
 
     .sidebar a:hover {
@@ -42,126 +49,130 @@
       background-color: #17405f;
     }
 
-    .sidebar a.logout-link {
-      color: #ffcccc !important;
+    /* Mobile sidebar hidden */
+    @media (max-width: 768px) {
+      .sidebar {
+        transform: translateX(-100%);
+      }
+      .sidebar.show {
+        transform: translateX(0);
+      }
+      .toggle-btn {
+        display: block;
+        background-color: #2A5C88;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1100;
+        border-radius: 5px;
+      }
     }
 
-    .sidebar a.logout-link:hover {
-      background-color: #c0392b;
-      color: white !important;
+    /* Desktop adjustments */
+    @media (min-width: 769px) {
+      .toggle-btn {
+        display: none;
+      }
+      .main-content {
+        margin-left: 220px;
+      }
     }
 
-    .btn-purple {
-      background: #2A5C88;
-      color: white;
-    }
-
-    .btn-purple:hover {
-      background: #1d4568;
-    }
-
-    .toggle-btn {
-      display: none;
-    }
-
+    /* Main content */
     .main-content {
+      flex-grow: 1;
       padding: 20px;
     }
 
-    .card {
-      border: none;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    /* Week material cards */
+    .week-material-card {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     }
 
-    /* Desktop layout */
-@media (min-width: 769px) {
-  .sidebar {
-    position: fixed;
-    width: 220px;
-    top: 0;
-    left: 0;
-    transform: none; /* Always visible on desktop */
-  }
+    .week-material-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
 
-  .main-content {
-    margin-left: 220px; /* Leave space for sidebar */
-  }
+    .week-material-card h5 {
+      font-weight: bold;
+      color: #2A5C88;
+      margin-bottom: 8px;
+      font-size: 1.1em;
+    }
 
-  .toggle-btn {
-    display: none; /* Hide toggle button on desktop */
-  }
-}
-
+    #statusMessage {
+      display: none;
+    }
   </style>
 </head>
 <body>
 
-<!-- Toggle button for mobile -->
-<button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
+<!-- Mobile toggle button -->
+<button class="toggle-btn" aria-label="Toggle menu">☰ Menu</button>
 
-<div class="container-fluid">
-  <div class="row">
-    <!-- Sidebar -->
-    <div class="sidebar" id="sidebar">
-      <h4 id="courseName" class="mb-4">Loading...</h4>
-      <div id="weeksMenu"></div>
-      <a href="our_course.html" style="background-color:#1f4568;">Back to Courses</a>
-    </div>
+<!-- Sidebar -->
+<nav class="sidebar" id="sidebar">
+  <h4 id="courseName">Loading...</h4>
+  <div id="weeksMenu"></div>
+  <a href="our_course.html" style="background-color:#1f4568;">Back to Courses</a>
+</nav>
 
-    <!-- Main Content -->
-    <div class="col-12 col-md-9 main-content-wrapper">
-      <h3 class="mb-4">Course Weeks</h3>
-      <div id="weekContent">
-        <p>Select a week from the menu to see details.</p>
-      </div>
-    </div>
+<!-- Main Content -->
+<main class="main-content">
+  <h3 class="mb-4">Course Weeks</h3>
+  <div id="weekContent">
+    <p>Select a week from the menu to see details.</p>
   </div>
-</div>
+</main>
 
-<!-- Custom Status Message -->
+<!-- Status Message -->
 <div id="statusMessage" class="alert"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import {
-    getFirestore,
-    doc,
-    getDoc
-  } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
   const firebaseConfig = {
-    apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
-    authDomain: "clms-dbfe1.firebaseapp.com",
-    projectId: "clms-dbfe1",
-    storageBucket: "clms-dbfe1.firebasestorage.app",
-    messagingSenderId: "1025852714357",
-    appId: "1:1025852714357:web:282d74003f389767ad773c"
+    apiKey: "AIzaSyD_C4ZPXTXQZtZJbtAwTiub_rkIZcvsE2Y",
+    authDomain: "clms-19db3.firebaseapp.com",
+    projectId: "clms-19db3",
+    storageBucket: "clms-19db3.appspot.com",
+    messagingSenderId: "218119035486",
+    appId: "1:218119035486:web:39291d39b4b461b56032cf"
   };
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  // Get courseId from URL
   const params = new URLSearchParams(window.location.search);
   const courseId = params.get("courseId");
   const statusMessageDiv = document.getElementById("statusMessage");
 
-  // Function to display custom status messages
   function showStatusMessage(message, type = 'info') {
     statusMessageDiv.textContent = message;
     statusMessageDiv.className = `alert mt-3 alert-${type}`;
     statusMessageDiv.style.display = 'block';
-    setTimeout(() => {
-      statusMessageDiv.style.display = 'none';
-    }, 3000); // Hide after 3 seconds
+    setTimeout(() => { statusMessageDiv.style.display = 'none'; }, 3000);
   }
 
   if (!courseId) {
     showStatusMessage("Invalid course ID.", "danger");
   }
 
-  let courseSubjects = []; // store subjects from Firestore
+  let courseSubjects = [];
 
   async function loadCourseDetails() {
     try {
@@ -169,43 +180,34 @@
       const courseSnap = await getDoc(courseRef);
 
       if (!courseSnap.exists()) {
-          showStatusMessage("Course not found!", "danger");
-          return;
+        showStatusMessage("Course not found!", "danger");
+        return;
       }
 
       const course = courseSnap.data();
       document.getElementById("courseName").innerText = course.title;
-
-      // store subjects globally
       courseSubjects = course.subjects || [];
 
       const weeksMenu = document.getElementById("weeksMenu");
       weeksMenu.innerHTML = "";
 
       if (!course.weeks || course.weeks < 1) {
-          weeksMenu.innerHTML = "<p class='text-white-50 p-2'>No weeks available.</p>"; /* Adjusted for visibility */
-          return;
+        weeksMenu.innerHTML = "<p class='text-white-50 p-2'>No weeks available.</p>";
+        return;
       }
 
       for (let i = 1; i <= course.weeks; i++) {
-          const weekLink = document.createElement("a");
-          weekLink.href = "#";
-          weekLink.innerText = `Week ${i}`;
-          weekLink.className = "text-white"; /* Add class for consistent styling */
-          weekLink.addEventListener("click", () => {
-              loadWeekContent(i);
-              // Close sidebar on click for mobile
-              const sidebar = document.getElementById("sidebar");
-              const mainContent = document.querySelector(".main-content-wrapper");
-              if (sidebar.classList.contains('show')) {
-                sidebar.classList.remove('show');
-                mainContent.classList.remove('shifted');
-              }
-          });
-          weeksMenu.appendChild(weekLink);
+        const weekLink = document.createElement("a");
+        weekLink.href = "#";
+        weekLink.innerText = `Week ${i}`;
+        weekLink.addEventListener("click", (e) => {
+          e.preventDefault();
+          loadWeekContent(i);
+          sidebar.classList.remove("show");
+        });
+        weeksMenu.appendChild(weekLink);
       }
     } catch (error) {
-      console.error("Error loading course details:", error);
       showStatusMessage("Error loading course details: " + error.message, "danger");
     }
   }
@@ -214,42 +216,46 @@
     const contentDiv = document.getElementById("weekContent");
 
     if (!courseSubjects.length) {
-        contentDiv.innerHTML = `<p>No subjects found for this course.</p>`;
-        return;
+      contentDiv.innerHTML = `<p>No subjects found for this course.</p>`;
+      return;
     }
 
-    let cardsHTML = `<h4 class="mb-3">Week ${weekNumber}</h4><div class="row g-4">`; /* Add g-4 for consistent spacing */
+    let cardsHTML = `<h4 class="mb-3">Week ${weekNumber}</h4><div class="row g-4">`;
 
     courseSubjects.forEach(subject => {
-        cardsHTML += `
-            <div class="col-sm-6 col-lg-4"> /* Added responsive column classes */
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">${subject}</h5>
-                        <p class="card-text">Week ${weekNumber} - ${subject}</p>
-                        <a href="week_detail.html?courseId=${courseId}&week=${weekNumber}&subject=${encodeURIComponent(subject)}"
-                           class="btn btn-primary mt-2">Enter</a> /* Added mt-2 for button spacing */
-                    </div>
-                </div>
-            </div>
-        `;
+      cardsHTML += `
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="week-material-card">
+            <h5>${subject}</h5>
+            <p>Study Material for Week ${weekNumber} - ${subject}</p>
+            <a href="week_detail.html?courseId=${courseId}&week=${weekNumber}&subject=${encodeURIComponent(subject)}" 
+               class="btn btn-primary">Enter</a>
+          </div>
+        </div>
+      `;
     });
 
     cardsHTML += `</div>`;
     contentDiv.innerHTML = cardsHTML;
   }
 
-  loadCourseDetails();
+  // Sidebar toggle
+  const toggleBtn = document.querySelector(".toggle-btn");
+  const sidebar = document.getElementById("sidebar");
 
-  // Sidebar toggle function for mobile
-  window.toggleSidebar = function () {
-    const sidebar = document.getElementById("sidebar");
-    const mainContent = document.querySelector(".main-content-wrapper");
-    if (sidebar && mainContent) {
-      sidebar.classList.toggle('show');
-      mainContent.classList.toggle('shifted');
+  toggleBtn.addEventListener("click", () => {
+    sidebar.classList.toggle("show");
+  });
+
+  // Close sidebar when clicking outside (mobile)
+  document.addEventListener("click", (e) => {
+    if (window.innerWidth <= 768 && sidebar.classList.contains("show") &&
+        !sidebar.contains(e.target) && !toggleBtn.contains(e.target)) {
+      sidebar.classList.remove("show");
     }
-  }
+  });
+
+  loadCourseDetails();
 </script>
 </body>
 </html>
