--- a/Student/course_detail.html
+++ b/Student/course_detail.html
@@ -45,6 +45,8 @@
       z-index: 1000;
       display: flex;
       flex-direction: column;
+      overflow-y: auto; 
+      max-height: 100vh
     }
 
     .sidebar.show {
